--- a/inventory-service/src/main/resources/application.yaml
+++ b/inventory-service/src/main/resources/application.yaml
@@ -8,6 +8,13 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: create-drop
+  application:
+    name: inventory-service
 
 server:
-  port: 9092
+  port: 0
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
