--- a/order-services/src/main/resources/application.yaml
+++ b/order-services/src/main/resources/application.yaml
@@ -8,6 +8,12 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: create-drop
-
+  application:
+    name: order-service
 server:
   port: 9091
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
