--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,24 @@
     <module>inventory-service</module>
     <module>order-services</module>
     <module>product-service</module>
+    <module>discovery-server</module>
   </modules>
+  <properties>
+    <spring-cloud.version>2022.0.3</spring-cloud.version>
+  </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
 
   <build>
     <plugins>
