--- a/product-service/src/main/resources/application.yaml
+++ b/product-service/src/main/resources/application.yaml
@@ -8,6 +8,11 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: create-drop
-
+  application:
+    name: product-service
 server:
-  port: 9090
+  port: 0
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
