--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>order-services</module>
     <module>product-service</module>
     <module>discovery-server</module>
+      <module>api-gateway</module>
   </modules>
   <properties>
     <spring-cloud.version>2022.0.3</spring-cloud.version>
